Fix layout bugs

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,5 @@
 .slide{
-    height:95vh;
+    min-height:95vh;
     width: 100%;
     display:inline-block;
     background-size: cover;
@@ -20,8 +20,8 @@
 
 .first {
     @extend .slide;
-    background-image: image-url('pillar.jpg');
-    h1{
+    background-image: image_url('pillar.jpg');
+    .banner-title{
         font-size:96px;
         text-transform:uppercase
     }
@@ -30,12 +30,33 @@
         margin:0 auto;
         padding:20px 40px;
     }
+    .center-vert{
+        position: absolute;
+        right:0;
+        left: 0;
+    }
 }
 
 // contact page
-body.contact{
+.contact{
+    .content-container{
+        max-width: 800px;;
+    }
     .banner{
-        background-image: image_url('contact.jpg')
+        position: relative;
+        padding-bottom: 40px;
+        &:after{
+            content:'';
+            display: inline-block;
+            width:100%;
+            height:100%;
+            position: absolute;
+            top:0;
+            left: 0; 
+            z-index: -1;
+            opacity: 0.5;
+            background-image: image_url('contact.jpg');
+        }
     }
 }
 
